--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "urls": "https://0.0.0.0:5001"
+  "urls": "https://0.0.0.0:5001",
+  "CsvFilePath": "/media/productiondata/IBASProduction2022.csv"
 }
